[package]
name = "cap-warm"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "=0.11.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
log = "0.4"
url = "=2.4.1"
base64 = "=0.21.7"
config = { version = "0.13", default-features = false, features = ["toml"] }
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
